--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ display: flex;
 flex-direction: row;
 }
 .artigo1{
-    padding-left: -20px;
+    float: right;
     padding-top: 80px;
-    width: 100%;
+    width: 80%;
     
 }
 .p1{
